--- a/scss/_story.scss
+++ b/scss/_story.scss
@@ -96,6 +96,7 @@
             align-items: center;
             background-image: url(https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/03-story/Story_bg.png?raw=true);
             .storyPic{
+                width: 50%;
                 h3{
                     font-size: 0;
                 }
@@ -104,6 +105,7 @@
                 }
             }
             .picTxt{
+                width: 50%;
                 p{
                     width: 90%;
                     margin: 0 auto;
