--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 html,body{
     line-height: 1.5;
     scroll-behavior: smooth;
+    font-family: 'Noto Sans', sans-serif;
 }
 h1, h2, h3, h4, h5, h6{
     line-height: 1.2;
@@ -40,25 +41,58 @@ img{
         position: sticky;
         padding-top: 50px;
         top: 0;
+        z-index: 1;
         h2{
             font-size: 0;
         }
         .asideNavBarList{
             li{
                 font-size: 0;
-                a{
-                    display: block;
-                    font-size: 20px;
-                    writing-mode: vertical-rl;
-                    line-height: 50px;
-                    padding: 15px 0;
-                }
+            }
+            a{
+                display: block;
+                font-size: 20px;
+                writing-mode: vertical-rl;
+                line-height: 50px;
+                padding: 15px 0;
+                border-bottom: 1px solid #aaa;
+                transition: .3s;
+            }
+            li:first-child a{
+                padding-top: 30px;
+            }
+            span{
+                position: relative;
+            }
+            span:before,
+            span:after{
+                content: "";
+                position: absolute;
+                height: 0;
+                transition: .3s;
+            }
+            span:before{
+                border-left: 1px solid #fa0;
+                top: 0;
+                left: 0;
+            }
+            span::after{
+                border-right: 1px solid #fa0;
+                right: 0;
+                bottom: 0%;
+            }
+            a:hover{
+                color: #fa0;
+            }
+            a:hover span:before,
+            a:hover span:after{
+                height: 100%;
             }
         }
     }
 }
 .asideCommon{
-    width: 14%;
+    width: 5%;
     position: sticky;
     height: 100%;
     top: 50px;
@@ -88,11 +122,9 @@ img{
         border-top: 2px solid #aaa;
         top: 0;
         left: -12px;
-        transition: .3s;
-    }
-    a:before{
         border-bottom: 2px solid #aaa;
         bottom: 0;
+        transition: .3s;
     }
     a:after{
         content: "";
@@ -101,12 +133,10 @@ img{
         border-right: 2px solid #aaa;
         top: -6px;
         right: 0;
-        transition: .3s;
-    }
-    a:after{
         border-left: 2px solid #aaa;
         top: -11px;
         left: 0;
+        transition: .3s;
     }
     a:hover{
         transform: translate(5px, 5px);
@@ -133,7 +163,6 @@ img{
     left: 50px;
     transform: translate(-5px, -5px);
     transition: .3s;
-    
 }
 .moreBtn:hover:before{
     height: 0;
