--- a/scss/_aboutUs.scss
+++ b/scss/_aboutUs.scss
@@ -2,13 +2,13 @@
     h2{
         font-size: 36px;
         text-align: center;
-        padding: 50px 0 50px 50px;
+        padding: 50px 0 50px 100px;
     }
     .aboutContent{
         display: flex;
     }
     .aboutUs{
-        width: 80%;
+        width: 70%;
         margin: 0 auto;
         li{
             display: flex;
@@ -40,7 +40,7 @@
                 width: 90%;
                 text-align: center;
                 padding: 10px;
-                background-color: rgba(245, 243, 242, .5);
+                background-color: $txt-backgorund-color;
             }
             h3{
                 font-size: 22px;
