--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -7,33 +7,35 @@
         
     }
     .headerBanner{
+        width: 100%;
+        max-width: 1440px;
         height: 100vh;
-        display: flex;
-        align-items: center;
+        margin: 0 auto;
+        position: relative;
         .impression{
-            width: 40%;
+            width: 70%;
             height: 100vh;
+            margin: 0 auto;
             line-height: 100vh;
             padding: 10px;
-            border-right: 1px solid #aaa;
-            img{
-                width: 100%;
-            }
+            animation-duration: 2s;
         }
     }
     .bannerTxt{
-        width: 60%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+        top: 0;
+        left: 0;
+        line-height: 100vh;
         .logo{
+            width: 85%;
+            margin: 0 auto;
+            animation-delay: 1s;
+            animation-duration: 2s;
             img{
                 width: 100%;
             }
-        }
-        p{
-            font-style: italic;
         }
     }
 }
