--- a/scss/_support.scss
+++ b/scss/_support.scss
@@ -2,18 +2,19 @@
     h2{
         font-size: 36px;
         text-align: center;
-        padding: 20px 0 20px 50px;
+        padding: 20px 0 20px 100px;
     }
 }
 .supportContent{
     display: flex;
-    
+    .supportWay{
+        width: 70%;
+        margin: 0 auto;
+    }
     .supportTxt{
         margin-bottom: 50px;
     }
     p{
-        width: 80%;
-        margin: 0 auto;
         padding: 20px 0;
     }
     .supportList{
@@ -23,10 +24,13 @@
         margin-bottom: 50px;
         h2{
             font-size: 0;
+            padding: 0;
+            text-align: unset;
+            line-height: 0;
         }
         li{
             width: 30%;
-            overflow: hidden;
+            // overflow: hidden;
             font-size: 0;
         }
         a{
