--- a/scss/BigIssueAll.scss
+++ b/scss/BigIssueAll.scss
@@ -1,9 +1,9 @@
-@import "_variables";
+@import "variables";
 @import "common";
 @import "header";
 @import "issue";
 @import "sales";
 @import "aboutUs";
-@import "story";
+@import "story_magazine";
 @import "support";
 @import "footer";
