--- a/scss/_story_magazine.scss
+++ b/scss/_story_magazine.scss
@@ -141,7 +141,7 @@
     }
     .storyArticle{
         width: 80%;
-        margin: 0 auto;
+        margin: 0 auto 40px auto;
         .storyPicDescription{
             width: 90%;
             margin: 0 auto 50px auto;
@@ -176,6 +176,7 @@
             p{
                 text-indent: 2em;
                 padding: 30px 50px;
+                
             }
         }
     }
