--- a/scss/_support.scss
+++ b/scss/_support.scss
@@ -20,7 +20,8 @@
         margin-bottom: 50px;
     }
     p{
-        padding: 20px 0;
+        padding: 10px 0;
+        text-align: center;
     }
     .supportList{
         display: flex;
