--- a/scss/_salePoints.scss
+++ b/scss/_salePoints.scss
@@ -17,7 +17,11 @@
             margin-bottom: 50px;
             p{
                 text-align: center;
+                margin-bottom: 10px;
             }
+        }
+        .saleStoreTxt p:nth-child(2){
+            margin-bottom: 20px;
         }
         .saleGoogleMap{
             width: 100%;
@@ -37,7 +41,7 @@
         margin-bottom: 50px;
             p{
                 text-align: center;
-                padding: 10px 0;
+                padding: 0px 0 10px;
             }
     }
     .taiwanAreas {
