--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,12 +1,13 @@
+// Header
 .header{
     h1{
         font-size: 0;
     }
-    .headerBar{
+    .mobileDevice{
         display: none;
         
     }
-    .headerBanner{
+    .pcHeaderBanner{
         width: 100%;
         max-width: 1440px;
         height: 100vh;
@@ -36,6 +37,168 @@
             img{
                 width: 100%;
             }
+        }
+    }
+}
+@media screen and (max-width: 769px){
+    .header{
+        .pcHeaderBanner{
+            display: none;
+        }
+        .mobileDevice{
+            display: flex;
+        }
+        .mobileNavBar{
+            width: 100%;
+            // height: 100px;
+            position: fixed;
+            z-index: 1;
+            background-color: #323232;
+            box-shadow: 0 3px 5px #aaa;
+            .logo{
+                width: 30%;
+                padding: 20px;
+            }
+        }
+        .mobileNavBar.backgroundChange{
+            background-color: #323232;
+        }
+        h2{
+            font-size: 0;
+        }
+        #headerMenuCtrl{
+            position: absolute;
+            opacity: 0;
+            z-index: -1;
+        }
+        #headerMenuCtrl:checked ~ .navWrap .mobileNavBarList{
+            top: 75px;
+            // z-index: 1;
+        }
+        #headerMenuCtrl:checked ~ .navWrap .menuCtrl:before{
+            box-shadow: 0px 12px 0 transparent,
+                        0px -12px 0 transparent;
+            transform: rotate(45deg);
+            // transition: 3s;
+        }
+        #headerMenuCtrl:checked ~ .navWrap .menuCtrl:after{
+            transform: rotate(-45deg);
+        }
+        .navWrap{
+            width: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+        .menuCtrl{
+            position: absolute;
+            display: block;
+            width: 50px;
+            height: 50px;
+            top: 10px;
+            right: 20px;
+            font-size: 0;
+            z-index: 1;
+        }
+        .menuCtrl:before,
+        .menuCtrl:after{
+            content: "";
+            position: absolute;
+            width: 40px;
+            height: 0;
+            border-bottom: 3px solid $box-shadow-color;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            margin: auto;
+            transition: 1s;
+        }
+        .menuCtrl:before{
+            box-shadow: -10px -12px 0 $box-shadow-color,
+                        -10px 12px 0 $box-shadow-color;
+        }
+        .mobileNavBarList{
+            position: absolute;
+            top: -999px;
+            left: 0;
+            width: 100%;
+            // z-index: 3;
+            transition: 1s;
+            li{
+                font-size: 0;
+                background-color: rgba(255, 255, 255, 1);
+                border-bottom: 1px solid #aaa;
+            }
+            a{
+                display: block;
+                font-size: 18px;
+                text-align: center;
+                padding: 20px 0;
+                span{
+                    position: relative;
+                }
+                span:before,
+                span:after{
+                    content: "";
+                    position: absolute;
+                    width: 0;
+                    transition: .5s;
+                }
+                span:before{
+                    border-top: 1px solid $hover-border-color;
+                    top: -5px;
+                    right: 0;
+                }
+                span:after{
+                    border-bottom: 1px solid $hover-border-color;
+                    bottom: -5px;
+                    left: 0;
+                }
+            
+                
+            }
+            a:hover span:before,
+			a:hover span:after {
+				width: 100%;
+            }
+            .menuIcon{
+                display: flex;
+                justify-content: center;
+                .fab,
+                .far{
+                    display: block;
+                    font-size: 30px;
+                    padding: 0 20px;
+                    color: $hover-background-color;
+                }
+            }
+        }
+        .mobileDivider{
+            padding: 60px 0;
+        }
+        .mobileHeaderBanner{
+            position: relative;
+            z-index: -1;
+            .mobileImpression{
+                width: 75%;
+                margin: 0 auto;
+            }
+            .mobileBigLogo{
+                width: 35%;
+                padding: 50px;
+                position: absolute;
+                top: 0;
+                left: -4%;
+            }
+        }
+    }
+    @keyframes menuMove {
+        0%{
+            transform: rotateX(0deg);
+        }
+        100%{
+            transform: rotateX(45deg);
         }
     }
 }
