--- a/scss/_salePoints.scss
+++ b/scss/_salePoints.scss
@@ -17,11 +17,7 @@
             margin-bottom: 50px;
             p{
                 text-align: center;
-                margin-bottom: 10px;
             }
-        }
-        .saleStoreTxt p:nth-child(2){
-            margin-bottom: 20px;
         }
         .saleGoogleMap{
             width: 100%;
@@ -41,7 +37,7 @@
         margin-bottom: 50px;
             p{
                 text-align: center;
-                padding: 0px 0 10px;
+                padding: 10px 0;
             }
     }
     .taiwanAreas {
@@ -51,11 +47,6 @@
         .mapsDetail{
             width: 43%;
         }
-        // .mapsDetail{
-        //     area:focus{
-        //         outline: none;
-        //     }
-        // }
         .content-group{
             width: 50%;
         }
@@ -98,6 +89,19 @@
         }
     }
 }
+@media screen and (max-width: 769px){
+    .salePoints{
+        h2{
+            padding: 25px 0;
+        }
+        .salePointsContent{
+            .saleStore{
+                width: 90%;
+            }
+        }
+    }
+}
+
 
 
 
