--- a/css/BigIssueAll.css
+++ b/css/BigIssueAll.css
@@ -526,6 +526,7 @@ img {
   text-align: center;
   padding: 20px 0;
   position: relative;
+  z-index: 0;
 }
 
 .sales .salesContent .salesList li .storyTxt h3:before {
