--- a/scss/_sales.scss
+++ b/scss/_sales.scss
@@ -41,6 +41,7 @@
                             text-align: center;
                             padding: 20px 0;
                             position: relative;
+                            z-index: 0;
                         }
                         h3:before{
                             content: "";
