--- a/scss/_salePoints.scss
+++ b/scss/_salePoints.scss
@@ -53,6 +53,7 @@
         .areaMap{
             display: none;
             position: relative;
+            z-index: -1;
         }
         .areaMap.mapOn{
             display: block;
