--- a/css/BigIssueAll.css
+++ b/css/BigIssueAll.css
@@ -191,7 +191,7 @@ img {
   content: "";
   position: absolute;
   height: 35%;
-  border-left: 2px solid rgba(255, 255, 255, 0.9);
+  border-left: 2px solid #fff;
   z-index: 2;
   top: 12px;
   left: 100px;
@@ -269,7 +269,9 @@ img {
   .header .mobileNavBar {
     width: 100%;
     position: fixed;
-    z-index: 1;
+    top: 0;
+    left: 0;
+    z-index: 2;
     background-color: #323232;
     box-shadow: 0 3px 5px #aaa;
   }
@@ -300,19 +302,20 @@ img {
   }
   .header .navWrap {
     width: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
+    z-index: 1;
   }
   .header .menuCtrl {
-    position: absolute;
+    position: fixed;
     display: block;
     width: 50px;
     height: 50px;
     top: 10px;
     right: 20px;
     font-size: 0;
-    z-index: 1;
+    z-index: 2;
   }
   .header .menuCtrl:before,
   .header .menuCtrl:after {
@@ -336,6 +339,7 @@ img {
     top: -999px;
     left: 0;
     width: 100%;
+    z-index: 1;
     transition: 1s;
   }
   .header .mobileNavBarList li {
@@ -384,10 +388,9 @@ img {
     padding: 0 20px;
     color: #ff8729;
   }
-  .header .mobileDivider {
-    padding: 60px 0;
-  }
   .header .mobileHeaderBanner {
+    margin-top: 100px;
+    width: 100%;
     position: relative;
     z-index: -1;
   }
@@ -401,14 +404,6 @@ img {
     position: absolute;
     top: 0;
     left: -4%;
-  }
-  @keyframes menuMove {
-    0% {
-      transform: rotateX(0deg);
-    }
-    100% {
-      transform: rotateX(45deg);
-    }
   }
 }
 
@@ -848,10 +843,9 @@ img {
 .magazines .selectYears .subSelectMenu {
   width: 100%;
   position: absolute;
-  top: -999px;
+  top: 34px;
   left: 0;
-  opacity: 0;
-  z-index: 1;
+  display: none;
 }
 
 .storyOfPeople .selectArea .subSelectMenu a,
@@ -876,10 +870,7 @@ img {
 .storyOfPeople .selectYears .selectMenu:hover > .subSelectMenu,
 .magazines .selectArea .selectMenu:hover > .subSelectMenu,
 .magazines .selectYears .selectMenu:hover > .subSelectMenu {
-  top: 34px;
-  opacity: 1;
-  z-index: 2;
-  transition: .5s;
+  display: block;
 }
 
 .storyOfPeople .selectArea .mobileSelectYears,
@@ -1573,6 +1564,7 @@ img {
 .fixedPoints .taiwanAreas .areaMap {
   display: none;
   position: relative;
+  z-index: -1;
 }
 
 .fixedPoints .taiwanAreas .areaMap.mapOn {
