--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -167,7 +167,7 @@ img {
 	content: "";
 	position: absolute;
 	height: 35%;
-	border-left: 2px solid rgba(255 ,255 ,255, .9);
+	border-left: 2px solid #fff;
 	z-index: 2;
 	top: 12px;
 	left: 100px;
