--- a/scss/_story_magazine.scss
+++ b/scss/_story_magazine.scss
@@ -120,10 +120,9 @@
             .subSelectMenu{
                 width: 100%;
                 position: absolute;
-                top: -999px;
+                top: 34px;
                 left: 0;
-                opacity: 0;
-                z-index: 1;
+                display: none;
                 a{
                     display: block;
                     font-size: 16px;
@@ -136,10 +135,7 @@
                 }
             }
             .selectMenu:hover > .subSelectMenu{
-                top: 34px;
-                opacity: 1;
-                z-index: 2;
-                transition: .5s;
+                display: block;
             }
             .mobileSelectYears{
                 display: none;
